Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62540

When changing the font size of the text then some symbols shown from QTextOption are scaled and some are not

    XMLWordPrintable

Details

    • ceddc14af17df166d05d98cfa76256bfc0b34183 (qt/qtbase/5.12)

    Description

      When changing the font size of the text then some symbols shown from QTextOption are scaled and some are not. This should be consistent, and additionally the space characters could be made bigger at the very least.

      Attachments

        For Gerrit Dashboard: QTBUG-62540
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes